--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -18,4 +18,4 @@ jobs:
           SHOW_PROJECTS: "False"
           SHOW_LINES_OF_CODE: "True"
           SHOW_LOC_CHART: "False"
-          LOCALE: "pt_BR"
+          LOCALE: "en"
